@startuml truc
class Utilisateur {
    -name: string
    -surname: string
    -email: string
    -password: string
    -phone_number: string
    -create_at: date
    -status: enum
}

class Candidat {

}

class Recruteur {

}

class Administrateur {

}

Utilisateur .. Candidat : herits
Utilisateur .. Recruteur : herits
Utilisateur .. Administrateur : herits

class Organisation {
    -siren: string
    -name: string
    -type: enum ou string
    -address: string
}

class OffreEmploi {
    -number: integer
    -status: enum
    -valid_date: date
    -description: string
}

class FichePoste {
    -title: string
    -status: enum
    -responsable: string
    -type: string
    -lieu: string
}

class Workflow {
    -hours:  integer
    -remote: boolean
    -day_off: integer
}

class Salaire {
    -average_salary: integer
    -min_salary: integer
    -max_salary: integer
}

FichePoste "1" *-- "1" Salaire
FichePoste "1" *-- "1" Workflow

OffreEmploi "*" *-- "1" FichePoste
@enduml